# molude

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-windows.bat
Source/: MoludeLookAndFeel.cpp  MoludeLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthEngine.cpp  SynthEngine.h
